Fix letter colors in FLOW menu in DARK MODE theme (#300)
* fix font color of pallete in flow sidebar

* add color to .editor-tray-breadcrumbs

--- a/MFE/flow/src/view/edit/style/red/palette.scss
+++ b/MFE/flow/src/view/edit/style/red/palette.scss
@@ -21,6 +21,7 @@
     bottom: 0;
     left:0;
     background: #f3f3f3;
+    color: #000;
     width: 180px;
     text-align: center;
     @include disable-selection;
